# mcpstate

./: .gitignore  .shotlist.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: concepts.md  test-evidence.md  use-case.md
docs/screenshots/: index.html  manifest.json
docs/superpowers/plans/: 2026-07-22-mcpstate.md
docs/superpowers/specs/: 2026-07-22-mcpstate-design.md
examples/: research_assistant.py
src/mcpstate/: __init__.py  aio.py  errors.py  fastmcp.py  ops.py  server.py  store.py
src/mcpstate/backends/: __init__.py  base.py  redis.py  sqlite.py
tests/: test_async_store.py  test_backends.py  test_cli.py  test_errors.py  test_fastmcp_helper.py  test_from_url.py  test_hardening.py  test_ops.py  test_races.py  test_server.py  test_store.py
